[package]
name = "anvfication"
version = "0.1.0"
edition = "2021"
authors = ["anubhavg@infopercept.com"]

[[bin]]
name = "gitgraph"
path = "src/gitgraph.rs"

[[bin]]
name = "http-status"
path = "src/http_status.rs"

[[bin]]
name = "lolcat"
path = "src/lolcat.rs"

[[bin]]
name = "snake"
path = "src/snake.rs"

[[bin]]
name = "dns-resolver"
path = "src/dns_resolver.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
crossterm = "0.27"
rand = "0.8"
