[package]
name = "anvfication"
version = "0.1.0"
edition = "2021"
authors = ["anubhavg@infopercept.com"]
description = "A collection of useful CLI tools written in Rust"
repository = "https://github.com/anubhavg-icpl/anvfication"

[[bin]]
name = "gitgraph"
path = "src/gitgraph.rs"

[[bin]]
name = "http-status"
path = "src/http_status.rs"

[[bin]]
name = "lolcat"
path = "src/lolcat.rs"

[[bin]]
name = "snake"
path = "src/snake.rs"

[[bin]]
name = "dns-resolver"
path = "src/dns_resolver.rs"

[[bin]]
name = "battery-monitor"
path = "src/battery_monitor.rs"

[[bin]]
name = "port-scanner"
path = "src/port_scanner.rs"

[[bin]]
name = "file-hasher"
path = "src/file_hasher.rs"

[[bin]]
name = "json-formatter"
path = "src/json_formatter.rs"

[[bin]]
name = "base64-tool"
path = "src/base64_tool.rs"

[[bin]]
name = "word-counter"
path = "src/word_counter.rs"

[[bin]]
name = "timestamp"
path = "src/timestamp.rs"

[[bin]]
name = "passgen"
path = "src/passgen.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
crossterm = "0.27"
rand = "0.8"
notify-rust = "4.9"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
serde_json = "1.0"
colored = "2.0"
base64 = "0.21"
chrono = "0.4"
